--- a/styles/main.css
+++ b/styles/main.css
@@ -2595,6 +2595,11 @@ table th.bg-pasific {
     color: #545454;
     line-height: 1.3;
 }
+
+.intro .intro-body video {
+    margin-top: 10em;
+    width: 100%;
+}
 .intro .intro-body .intro-text {
     font-size: 16px;
     color:#545454;
